# pyvoro2

./: .flake8  .gitignore  CHANGELOG.md  CMakeLists.txt  DEV_PLAN.md  LICENSE  NOTICE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  wheels.yml
cpp/: bindings.cpp
docs/: index.md  requirements.txt
docs/guide/: concepts.md  domains.md  inverse.md  notebooks.md  operations.md  planar.md  powerfit.md  topology.md  visualization.md
docs/javascripts/: mathjax.js
docs/notebooks/: 01_basic_compute.ipynb  01_basic_compute.md  02_periodic_graph.ipynb  02_periodic_graph.md  03_locate_and_ghost.md  04_inverse_fit.ipynb  04_powerfit.md  05_visualization.md  06_powerfit_reports.ipynb  06_powerfit_reports.md  07_powerfit_infeasibility.md  08_powerfit_active_path.ipynb  08_powerfit_active_path.md
docs/project/: about.md  ai.md  license.md  roadmap.md
docs/reference/: api.md  diagnostics.md  domains.md  duplicates.md  inverse.md  (+6 more)
notebooks/: 03_locate_and_ghost.ipynb  04_powerfit.ipynb  05_visualization.ipynb  07_powerfit_infeasibility.ipynb  README.md
tests/: conftest.py  test_adjacency_output.py  test_api_input_validation.py  test_crosscheck_pyvoro.py  test_duplicate_check.py  test_face_properties.py  test_face_shift_tie_break.py  test_fuzz_compute.py  test_ghost_cells.py  test_include_empty.py  test_inverse_fit.py  test_lazy_core_import.py  test_locate.py  test_normalize_topology.py  test_normalize_vertices.py  test_notebook_checker_import_mode.py  test_notebooks_meta.py  test_orthorhombic_face_shifts.py  test_periodic.py  test_periodic_cell_degeneracy.py  test_periodic_face_shifts.py  test_periodic_from_params.py  test_periodic_remap.py  test_planar_api_dispatch.py  test_planar_diagnostics.py  test_planar_edge_shifts2d.py  test_planar_fuzz_compute.py  test_planar_integration.py  test_power.py  test_power_periodic_pruning_regression.py  test_powerfit_active_set.py  test_powerfit_constraints.py  test_powerfit_fit.py  test_powerfit_realization.py  test_powerfit_reports.py  test_powerfit_validation_regressions.py  test_readme_sync.py  test_release_tools.py  test_smoke.py  test_strict_validation.py  (+4 more)
tools/: README.md  build_wheels_wsl.sh  check_dist.py  check_notebooks.py  export_notebooks.py  gen_readme.py  install_wheel_overlay.py  release_check.py
vendor_patches/: 0001-inflate-max-radius-nextafter-3d.patch
(+41 files in other folders)
